added slider-top section

--- a/app/index.html
+++ b/app/index.html
@@ -47,16 +47,15 @@
         <div class="header__bottom-inner">
 
           <a class="logo" href="#">
-            <img class="logo" src="images/logo.svg" alt="логотип" width="200px;height="60px">
+            <img class="logo" src="images/logo.svg" alt="логотип" width="200px;height=" 60px">
           </a>
 
           <button class="header__bottom-btn">Каталог продуктов</button>
 
           <form class="header__search" action="#">
             <div class="header__search-block">
-              <input class="header__search-input" 
-              name="search" type="search" aria-label="Найти в магазине"
-              required placeholder="Найти в магазине ...">
+              <input class="header__search-input" name="search" type="search" aria-label="Найти в магазине" required
+                placeholder="Найти в магазине ...">
             </div>
             <button class="header__search-btn btn-black" type="submit">ПОИСК</button>
           </form>
@@ -66,26 +65,91 @@
               <a class="header__user-link header__user-link--icon-user" href="#" aria-label="личный кабинет"></a>
             </li>
 
-             <li class="header__user-item">
-               <a class="header__user-link header__user-link--icon-heart" href="#" aria-label="избранное">
-                 <span class="header__user-num">12</span>
-               </a>
-             </li>
-
-              <li class="header__user-item">
-                <a class="header__user-link header__user-link--icon-cart" href="#" aria-label="корзина"></a>
+            <li class="header__user-item">
+              <a class="header__user-link header__user-link--icon-heart" href="#" aria-label="избранное">
                 <span class="header__user-num">12</span>
-              </li>
+              </a>
+            </li>
+
+            <li class="header__user-item">
+              <a class="header__user-link header__user-link--icon-cart" href="#" aria-label="корзина"></a>
+              <span class="header__user-num">12</span>
+            </li>
           </ul>
         </div>
       </div>
     </div>
   </header>
-<!-- сoздать page!!!!!!!!!!!!!!!!!!!!! -->
+  <!-- сoздать page!!!!!!!!!!!!!!!!!!!!! -->
 
-  <main class="main"></main>
 
-<!-- =============FOTER================================================ -->
+
+
+
+  <main class="main">
+    <div class="slider-top">
+      <div class="slider-top__inner">
+
+        <div class="slider-top__item" style=" background-image: url('images/slider/top-slider1.jpg');">
+          <div class="container slider-top__container">
+            <div class="slider-top__content">
+              <div class="slider-top__top-title">
+                <h1 class="slider-top__title">
+                  СВЕЖАЧОК ВАМ в ХАТУ
+                  <span class="slider-top__subtitle">Скидка -50%</span>
+                </h1>
+                <p class="slider-top__text">
+                  Только с 7 по 13 июля скидка на сезонные фрукты и овощи до 50%. Торопитесь!
+                </p>
+              </div>
+              <a class="slider-top__btn btn" href="#">Купить сейчас</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="slider-top__item" style=" background-image: url('images/slider/top-slider2.jpg');">
+          <div class="container">
+            <div class="slider-top__content">
+              <div class="slider-top__top-title">
+                <h1 class="slider-top__title">
+                  НАКРУТИ СЕБЕ ТОМАТОВ
+                  <span class="slider-top__subtitle">АКЦИЯ: 3 кг по цене 1</span>
+                </h1>
+                <p class="slider-top__text">
+                  Только с 12 по 15 июля скидка на домашние помидорчики
+                </p>
+              </div>
+              <a class="slider-top__btn btn" href="#">Купить сейчас</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="slider-top__item" style=" background-image: url('images/slider/top-slider3.jpg');">
+          <div class="container">
+            <div class="slider-top__content">
+              <div class="slider-top__top-title">
+                <h1 class="slider-top__title">
+                  Пусть остальные позеленеют от зависти
+                  <span>Распродажа зелени</span>
+                </h1>
+              </div>
+              <a class="slider-top__btn btn" href="#">Купить сейчас</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+    </div>
+  </main>
+
+
+
+
+
+
+
+  <!-- =============FOTER================================================ -->
   <footer class="footer">
     <div class="container">
       <div class="footer-top">
@@ -102,7 +166,7 @@
           </form>
         </div>
 
-        <div class="footer-top__wrap">s
+        <div class="footer-top__wrap">
           <div class="footer-top__box">
             <ul class="footer-top__list">
               <li class="footer-top__list-item">
@@ -142,7 +206,7 @@
             </ul>
           </div>
         </div>
-        
+
         <div class="footer-top__contact">
           <a class="footer-top__phone" href="tel:+7907288365">Горячая линия +7 907 288 365</a>
           <a class="footer-top__address" href="#">Санкт-Петербург, ул. Ленина, 1</a>
@@ -231,7 +295,7 @@
             <p class="footer-bottom__text">© 2021 ФРЕШОК</p>
             <ul class="footer-bottom__payment">
               <li class="footer-bottom__payment-img footer-bottom__payment-img--viza"></li>
-              
+
               <li class="footer-bottom__payment-img footer-bottom__payment-img--mc"></li>
             </ul>
           </div>
