--- a/app/index.html
+++ b/app/index.html
@@ -166,8 +166,245 @@
         </ul>
       </div>
     </section>
+    <!-- ======================product=========================================================== -->
+    <section class="product">
+      <div class="container">
+        <h2 class="title">Топовые товары</h2>
 
-    
+        <ul class="product__list">
+          <li class="product__item">
+            <button class="product__button" type="button">
+              Все товары
+            </button>
+          </li>
+
+          <li class="product__item">
+            <button class="product__button" type="button">
+              Фрукты
+            </button>
+          </li>
+
+          <li class="product__item">
+            <button class="product__button" type="button">
+              ОВОЩИ
+            </button>
+          </li>
+
+          <li class="product__item">
+            <button class="product__button" type="button">
+              Напитки
+            </button>
+          </li>
+
+          <li class="product__item">
+            <button class="product__button" type="button">
+              БАКАЛЕЯ
+            </button>
+          </li>
+        </ul>
+
+        <div class="product__items">
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun">
+                <span class="product-item__status product-item__status--new">НОВИНКА</span>
+                <span class="product-item__status product-item__status--sale">-50%</span>
+              </div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/pineapple.jpg" alt="ананас">
+              </a>
+            </div>
+            <h3 class="product-item__title">Ананас, 1кг</h3>
+            <div class="product-item__price">
+              <p class="product-item__old-price">1999 ₽ </p>
+              <p class="product-item__new-price">999 ₽ </p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun"></div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/lemon.jpg" alt="лимон">
+              </a>
+            </div>
+            <h3 class="product-item__title">Лимон, 1кг</h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">199 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun"></div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/dragon.jpg" alt="питахая">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Питахайя красная с белой мякотью, 1шт
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">1019 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun"></div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/ketchup.jpg" alt="кетчуп">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Кетчуп томатный детский органический Bio-Zentrale 500мл, 1 шт
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">600 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun">
+                <span class="product-item__status product-item__status--hit">ХИТ</span>
+              </div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/carrot.jpg" alt="морковь">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Морковь молодая с бабушкиной грядки, 1кг
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">49 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun">
+                <span class="product-item__status product-item__status--sale">-30%</span>
+              </div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/juice.jpg"
+                  alt="напиток сокосодержащий апельсиновый">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Напиток сокосодержащий Sanpellegrino Aranciata Orange Красный апельсин безалкогольн...
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__old-price">299 ₽</p>
+              <p class="product-item__new-price">199 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun">
+                <span class="product-item__status">НОВИНКА</span>
+              </div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/coffee.jpg" alt="коффе">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Кофе с коноплей органический Caffé Salomoni 250г
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">877 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+
+          <div class="product-item">
+            <div class="product-item__top-status">
+              <div class="product-item__status-spun">
+                <span class="product-item__status">НОВИНКА</span>
+              </div>
+              <button class="product-item__heart-btn" type="submit">
+                <img class="product-item__img" src="images/icons/icon-heart-product.svg" alt="добавить в избранное">
+              </button>
+            </div>
+            <div class="product-item__img-box">
+              <a class="product-item__img-link" href="#">
+                <img class="product-item__images" src="images/product/paprik.jpg" alt="паприка">
+              </a>
+            </div>
+            <h3 class="product-item__title">
+              Перец оранжевый, 1кг
+            </h3>
+            <div class="product-item__price">
+              <p class="product-item__new-price">349 ₽</p>
+              <button class="product-item__cart">
+                <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <a class="product__link" href="#">Показать еще</a>
+      </div>
+    </section>
+
+
   </main>
 
 
