--- a/app/index.html
+++ b/app/index.html
@@ -79,10 +79,6 @@
       </div>
     </div>
   </header>
-  <!-- сoздать page!!!!!!!!!!!!!!!!!!!!! -->
-
-
-
 
 
   <main class="main">
@@ -138,7 +134,7 @@
         </div>
       </div>
     </section>
-
+<!-- ==============================service============================= -->
     <section class="service">
       <div class="container">
 
@@ -173,31 +169,31 @@
 
         <ul class="product__list">
           <li class="product__item">
-            <button class="product__button" type="button">
+            <button class="product__button" type="button" data-filter="all">
               Все товары
             </button>
           </li>
 
           <li class="product__item">
-            <button class="product__button" type="button">
+            <button class="product__button" type="button" data-filter=".category-fruit">
               Фрукты
             </button>
           </li>
 
           <li class="product__item">
-            <button class="product__button" type="button">
+            <button class="product__button" type="button" data-filter=".category-vegetables">
               ОВОЩИ
             </button>
           </li>
 
           <li class="product__item">
-            <button class="product__button" type="button">
+            <button class="product__button" type="button" data-filter=".category-beverages">
               Напитки
             </button>
           </li>
 
           <li class="product__item">
-            <button class="product__button" type="button">
+            <button class="product__button" type="button" data-filter=".category-grocery">
               БАКАЛЕЯ
             </button>
           </li>
@@ -205,7 +201,7 @@
 
         <div class="product__items">
 
-          <div class="product-item">
+          <div class="product-item mix category-fruit">
             <div class="product-item__top-status">
               <div class="product-item__status-spun">
                 <span class="product-item__status product-item__status--new">НОВИНКА</span>
@@ -222,15 +218,17 @@
             </div>
             <h3 class="product-item__title">Ананас, 1кг</h3>
             <div class="product-item__price">
-              <p class="product-item__old-price">1999 ₽ </p>
-              <p class="product-item__new-price">999 ₽ </p>
+              <div class="product-item__price-all">
+                <p class="product-item__old-price">1999 ₽ </p>
+                <p class="product-item__new-price">999 ₽ </p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-fruit">
             <div class="product-item__top-status">
               <div class="product-item__status-spun"></div>
               <button class="product-item__heart-btn" type="submit">
@@ -244,14 +242,16 @@
             </div>
             <h3 class="product-item__title">Лимон, 1кг</h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">199 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">199 ₽</p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-fruit">
             <div class="product-item__top-status">
               <div class="product-item__status-spun"></div>
               <button class="product-item__heart-btn" type="submit">
@@ -267,14 +267,16 @@
               Питахайя красная с белой мякотью, 1шт
             </h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">1019 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">1019 ₽</p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-grocery">
             <div class="product-item__top-status">
               <div class="product-item__status-spun"></div>
               <button class="product-item__heart-btn" type="submit">
@@ -290,14 +292,16 @@
               Кетчуп томатный детский органический Bio-Zentrale 500мл, 1 шт
             </h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">600 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">600 ₽</p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-vegetables">
             <div class="product-item__top-status">
               <div class="product-item__status-spun">
                 <span class="product-item__status product-item__status--hit">ХИТ</span>
@@ -315,14 +319,17 @@
               Морковь молодая с бабушкиной грядки, 1кг
             </h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">49 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">49 ₽</p>
+              </div>
+
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-beverages">
             <div class="product-item__top-status">
               <div class="product-item__status-spun">
                 <span class="product-item__status product-item__status--sale">-30%</span>
@@ -341,15 +348,17 @@
               Напиток сокосодержащий Sanpellegrino Aranciata Orange Красный апельсин безалкогольн...
             </h3>
             <div class="product-item__price">
-              <p class="product-item__old-price">299 ₽</p>
-              <p class="product-item__new-price">199 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__old-price">299 ₽</p>
+                <p class="product-item__new-price">199 ₽</p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-grocery">
             <div class="product-item__top-status">
               <div class="product-item__status-spun">
                 <span class="product-item__status">НОВИНКА</span>
@@ -367,14 +376,16 @@
               Кофе с коноплей органический Caffé Salomoni 250г
             </h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">877 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">877 ₽</p>
+              </div>
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
             </div>
           </div>
 
-          <div class="product-item">
+          <div class="product-item mix category-vegetables">
             <div class="product-item__top-status">
               <div class="product-item__status-spun">
                 <span class="product-item__status">НОВИНКА</span>
@@ -392,7 +403,10 @@
               Перец оранжевый, 1кг
             </h3>
             <div class="product-item__price">
-              <p class="product-item__new-price">349 ₽</p>
+              <div class="product-item__price-all">
+                <p class="product-item__new-price">349 ₽</p>
+              </div>
+
               <button class="product-item__cart">
                 <img class="product-item__cart-btn" src="images/icons/icon-cart-product.svg" alt="добавить в корзину">
               </button>
