--- a/app/index.html
+++ b/app/index.html
@@ -41,38 +41,38 @@
       </div>
     </div>
 
-    <div class="header__bottom">
+    <div class="header-bottom">
       <div class="container">
-        <div class="header__bottom-inner">
-
-          <a class="logo" href="#">
-            <img class="logo" src="images/logo.svg" alt="логотип" width="200px;height=" 60px">
+        <div class="header-bottom__inner">
+          <a class="logo header-bottom__logo" href="#">
+            <img class="logo" src="images/logo.svg" alt="логотип" width="200px" height=" 60px">
           </a>
+          <button class="header-bottom__btn">Каталог продуктов</button>
 
-          <button class="header__bottom-btn">Каталог продуктов</button>
-
-          <form class="header__search" action="#">
-            <div class="header__search-block">
-              <input class="header__search-input" name="search" type="search" aria-label="Найти в магазине" required
+          <form class="header-bottom__search" action="#">
+            <div class="header-bottom__search-block">
+              <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
+                required
                 placeholder="Найти в магазине ...">
             </div>
-            <button class="header__search-btn btn-black" type="submit">ПОИСК</button>
+            <button class="header-bottom__search-btn btn-black" type="submit">ПОИСК</button>
           </form>
 
-          <ul class="header__user-nav">
-            <li class="header__user-item">
-              <a class="header__user-link header__user-link--icon-user" href="#" aria-label="личный кабинет"></a>
+          <ul class="header-bottom__user-nav">
+            <li class="header-bottom__user-item">
+              <a class="header-bottom__user-link header-bottom__user-link--user" href="#"
+                aria-label="личный кабинет"></a>
             </li>
 
-            <li class="header__user-item">
-              <a class="header__user-link header__user-link--icon-heart" href="#" aria-label="избранное">
-                <span class="header__user-num">12</span>
+            <li class="header-bottom__user-item">
+              <a class="header-bottom__user-link header-bottom__user-link--heart" href="#" aria-label="избранное">
+                <span class="header-bottom__user-num">12</span>
               </a>
             </li>
 
-            <li class="header__user-item">
-              <a class="header__user-link header__user-link--icon-cart" href="#" aria-label="корзина"></a>
-              <span class="header__user-num">12</span>
+            <li class="header-bottom__user-item">
+              <a class="header-bottom__user-link header-bottom__user-link--cart" href="#" aria-label="корзина"></a>
+              <span class="header-bottom__user-num">12</span>
             </li>
           </ul>
         </div>
@@ -136,6 +136,7 @@
     </section>
 <!-- ==============================service============================= -->
     <section class="service">
+      <h1 class="sr-only">Услуги и помощь</h1>
       <div class="container">
 
         <ul class="service__inner">
@@ -429,6 +430,7 @@
 
   <!-- =============FOTER================================================ -->
   <footer class="footer">
+    <h1 class="sr-only">Фрешок Онлайн-Маркет</h1>
     <div class="container">
       <div class="footer-top">
         <div class="footer-top__item">
