--- a/app/index.html
+++ b/app/index.html
@@ -52,8 +52,7 @@
           <form class="header-bottom__search" action="#">
             <div class="header-bottom__search-block">
               <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
-                required
-                placeholder="Найти в магазине ...">
+                required placeholder="Найти в магазине ...">
             </div>
             <button class="header-bottom__search-btn btn-black" type="submit">ПОИСК</button>
           </form>
@@ -85,7 +84,7 @@
     <section class="slider-top">
       <div class="slider-top__inner">
 
-        <div class="slider-top__item" style=" background-image: url('images/slider/top-slider1.jpg');">
+        <div class="slider-top__item" style="background-image: url('images/slider/top-slider1.jpg');">
           <div class="container slider-top__container">
             <div class="slider-top__content">
               <div class="slider-top__top-title">
@@ -119,7 +118,7 @@
           </div>
         </div>
 
-        <div class="slider-top__item" style=" background-image: url('images/slider/top-slider3.jpg');">
+        <div class="slider-top__item" style="background-image: url('images/slider/top-slider3.jpg');">
           <div class="container">
             <div class="slider-top__content">
               <div class="slider-top__top-title">
@@ -134,7 +133,7 @@
         </div>
       </div>
     </section>
-<!-- ==============================service============================= -->
+    <!-- ==============================service============================= -->
     <section class="service">
       <h1 class="sr-only">Услуги и помощь</h1>
       <div class="container">
@@ -414,10 +413,48 @@
             </div>
           </div>
         </div>
-
         <a class="product__link" href="#">Показать еще</a>
       </div>
     </section>
+
+    <div class="top-product">
+      <div class="container">
+        <div class="top-product__inner">
+
+          <div class="top-product__item top-product__item--group1" 
+          style="background-image: url('images/top-product/group1.jpg');">
+            <div class="top-product__subtitle">СВЕЖАЙШИЕ ФРУКТЫ</div>
+            <h2 class="top-product__title top-product__title--shadow">
+              НАЧНИ ФРУКТОВОЕ ЛЕТО
+              ВСЕГО От 99 ₽
+            </h2>
+            <a class="top-product__link top-product__link--group1" href="#">ПЕРЕЙТИ К ПОКУПКАМ</a>
+          </div>
+
+          <div class="top-product__item top-product__item--group2" 
+          style="background-image: url('images/top-product/group2.jpg');">
+            <div class="top-product__subtitle">СЕЗОННАЯ РАСПРОДАЖА</div>
+            <h2 class="top-product__title top-product__title--wight2">
+              ОВОЩЕПАД
+              ДО -50%
+            </h2>
+            <a class="top-product__link" href="#">ПЕРЕЙТИ К ПОКУПКАМ</a>
+          </div>
+
+          <div class="top-product__item" 
+          style="background-image: url('images/top-product/group3.jpg');">
+            <div class="top-product__subtitle">НЯМ-НЯМ</div>
+            <h2 class="top-product__title">
+              СВЕЖИЙ
+              ХЛЕБЧИК
+            </h2>
+            <a class="top-product__link" href="#">ПЕРЕЙТИ К ПОКУПКАМ</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
 
 
   </main>
