--- a/app/index.html
+++ b/app/index.html
@@ -174,7 +174,7 @@
     <section class="product">
       <div class="container">
         <h2 class="title">Топовые товары</h2>
-<!-- 1.55 мин -->
+        <!-- 1.55 мин -->
         <ul class="product__list mixer">
           <li class="product__item">
             <button class="product__button" type="button" data-filter="all">
@@ -208,7 +208,6 @@
         </ul>
 
         <div class="product__items">
-
           <article class="product-item mix category-fruit">
             <div class="product-item__top">
               <div class="product-item__span">
@@ -229,8 +228,7 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/pineapple.jpg" width="300" height="" alt="ананас">
+                <img class="product-item__images" src="images/product/pineapple.jpg" width="300" height="" alt="ананас">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -276,8 +274,7 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/lemon.jpg" width="300" height="225" alt="лимон">
+                <img class="product-item__images" src="images/product/lemon.jpg" width="300" height="225" alt="лимон">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -323,8 +320,8 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/dragon.jpg" width="300" height="225" alt="питахая">
+                <img class="product-item__images" src="images/product/dragon.jpg" width="300" height="225"
+                  alt="питахая">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -366,8 +363,8 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/ketchup.jpg" width="300" height="225" alt="кетчуп">
+                <img class="product-item__images" src="images/product/ketchup.jpg" width="300" height="225"
+                  alt="кетчуп">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -413,8 +410,8 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/carrot.jpg" width="300" height="225" alt="морковь">
+                <img class="product-item__images" src="images/product/carrot.jpg" width="300" height="225"
+                  alt="морковь">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -461,8 +458,8 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/juice.jpg" width="300" height="225" alt="напиток сокосодержащий апельсиновый">
+                <img class="product-item__images" src="images/product/juice.jpg" width="300" height="225"
+                  alt="напиток сокосодержащий апельсиновый">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -511,8 +508,7 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/coffee.jpg" width="300" height="225" alt="коффе">
+                <img class="product-item__images" src="images/product/coffee.jpg" width="300" height="225" alt="коффе">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -558,8 +554,8 @@
             </div>
             <div class="product-item__img-box">
               <a class="product-item__img-link" href="#">
-                <img class="product-item__images" 
-                src="images/product/paprik.jpg" width="300" height="225" alt="паприка">
+                <img class="product-item__images" src="images/product/paprik.jpg" width="300" height="225"
+                  alt="паприка">
               </a>
             </div>
             <h3 class="product-item__title">
@@ -599,8 +595,8 @@
       <div class="container">
         <div class="top-product__inner">
 
-          <div class="top-product__item top-product__item--group1" 
-          style="background-image: url('images/top-product/group1.jpg');">
+          <div class="top-product__item top-product__item--group1"
+            style="background-image: url('images/top-product/group1.jpg');">
             <div class="top-product__subtitle">свежайшие фрукты</div>
             <h2 class="top-product__title top-product__title--shadow">
               начти фруктовое лето
@@ -609,8 +605,8 @@
             <a class="top-product__link top-product__link--group1" href="#">перейти к покупкам</a>
           </div>
 
-          <div class="top-product__item top-product__item--group2" 
-          style="background-image: url('images/top-product/group2.jpg');">
+          <div class="top-product__item top-product__item--group2"
+            style="background-image: url('images/top-product/group2.jpg');">
             <div class="top-product__subtitle">сезонная распродажа</div>
             <h2 class="top-product__title top-product__title--wight2">
               овощепад
@@ -619,8 +615,7 @@
             <a class="top-product__link" href="#">перейти к покупкам</a>
           </div>
 
-          <div class="top-product__item" 
-          style="background-image: url('images/top-product/group3.jpg');">
+          <div class="top-product__item" style="background-image: url('images/top-product/group3.jpg');">
             <div class="top-product__subtitle">ням-ням</div>
             <h2 class="top-product__title">
               свежий
@@ -631,19 +626,17 @@
         </div>
       </div>
     </div>
-
   </main>
 
 
-  <!-- =============FOTER================================================
-  переделать 1.37 мин -->
   <footer class="footer">
     <div class="container">
+      <a class="footer-top__logo logo" href="#">
+        <img class="logo" src="images/logo.svg" alt="логотип" width="200" height="60">
+      </a>
+
       <div class="footer-top">
         <div class="footer-top__item">
-          <a class="footer-top__logo logo" href="#">
-            <img class="logo" src="images/logo.svg" alt="логотип" width="200" height="60">
-          </a>
           <p class="footer-top__text">
             Следите за нашими акциями
           </p>
@@ -653,57 +646,40 @@
           </form>
         </div>
 
-        <div class="footer-top__wrap">
-          <div class="footer-top__box">
-            <ul class="footer-top__list">
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">О нас</a>
-              </li>
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Контакты</a>
-              </li>
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Публичная оферта</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-top__box">
-            <ul class="footer-top__list">
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Оплата и доставка</a>
-              </li>
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Вакансии</a>
-              </li>
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Акции</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="footer-top__box">
-            <ul class="footer-top__list">
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Отзывы</a>
-              </li>
-              <li class="footer-top__list-item">
-                <a class="footer-top__link stylegui" href="#">Новости</a>
-              </li>
-            </ul>
-          </div>
-        </div>
+        <ul class="footer-top__list">
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">О нас</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Контакты</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Публичная оферта</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Оплата и доставка</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Вакансии</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Акции</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Отзывы</a>
+          </li>
+          <li class="footer-top__list-item">
+            <a class="footer-top__link stylegui" href="#">Новости</a>
+          </li>
+        </ul>
 
         <div class="footer-top__contact">
-          <!-- <address class="footer-top__info> -->
-             <a class="footer-top__phone stylegui" href="tel:+7907288365">
-               Горячая линия +7 907 288 365
-             </a>
-             <a class="footer-top__address stylegui" href="#">
-               Санкт-Петербург, ул. Ленина, 1
-             </a>
-          <!-- </address> -->
-         
+          <a class="footer-top__phone stylegui" href="tel:+7907288365">
+            Горячая линия +7 907 288 365
+          </a>
+          <a class="footer-top__address stylegui" href="#">
+            Санкт-Петербург, Ул. Ленина, 1
+          </a>
 
           <ul class="footer-top__social">
             <li class="footer-top__social-list">
@@ -782,15 +758,15 @@
           </ul>
         </div>
       </div>
+    </div>
 
-      <div class="footer-bottom">
-        <div class="container">
-          <div class="footer-bottom__wrap">
-            <p class="footer-bottom__text">© 2021 фрешок</p>
-            <ul class="footer-bottom__payment">
-              <li class="footer-bottom__img footer-bottom__img--viza"></li>
-              <li class="footer-bottom__img footer-bottom__img--mc"></li>
-            </ul>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="footer-bottom__wrap">
+          <p class="footer-bottom__text">© 2021 фрешок</p>
+          <div class="footer-bottom__img ">
+            <img class="footer-bottom__img--viza" src="images/icons/icon-visa.svg" alt="viza">
+            <img class="footer-bottom__img--mc" src="images/icons/icon-mc.svg" alt="mastercard">
           </div>
         </div>
       </div>
