--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+  <!-- в галпфайле поменяла  outputStyle: 'expanded' на 'compressed' чтобы минифицированная версия css была, но почему -то не работает -->
+
   <header class="header">
     <h1 class="sr-only">Фрешок Онлайн-Маркет</h1>
     <div class="header-top">
@@ -57,11 +59,8 @@
           <button class="header-bottom__btn  type=" button">Каталог продуктов</button>
 
           <form class="header-bottom__search" action="#">
-            <!--  _search-block убрать, все стили на search-input-->
-            <div class="header-bottom__search-block">
-              <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
-                required placeholder="Найти в магазине ...">
-            </div>
+            <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
+              required placeholder="Найти в магазине ...">
             <button class="header-bottom__search-btn btn-black" type="button">поиск</button>
           </form>
 
@@ -122,7 +121,7 @@
                   Только с 12 по 15 июля скидка на домашние помидорчики
                 </p>
               </div>
-              <a class="slider-top__btn btn" href="#">Купить сейчас</a>
+              <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
             </div>
           </div>
         </li>
@@ -136,12 +135,13 @@
                   <span class="slider-top__subtitle">Распродажа зелени</span>
                 </h3>
               </div>
-              <a class="slider-top__btn btn" href="#">Купить сейчас</a>
+              <a class="slider-top__btn btn-green" href="#">Купить сейчас</a>
             </div>
           </div>
         </li>
     </section>
-    <!-- ==============================service============================= -->
+
+
     <section class="service">
       <h2 class="sr-only">Услуги и помощь</h2>
       <div class="container">
@@ -170,11 +170,12 @@
         </ul>
       </div>
     </section>
-    <!-- ======================product=========================================================== -->
+
+
     <section class="product">
       <div class="container">
         <h2 class="title">Топовые товары</h2>
-        <!-- 1.55 мин -->
+        <!-- начну делать блок акции и переделаю на mixer -->
         <ul class="product__list mixer">
           <li class="product__item">
             <button class="product__button" type="button" data-filter="all">
@@ -236,12 +237,13 @@
             </h3>
             <div class="product-item__price">
               <div class="product-item__price-all">
-                <!-- рубли на псевдоэлемент или спан 1.35 минута -->
                 <p class="product-item__old-price">
-                  1999 ₽
+                  1999
+                  <span class="product-item__rub">₽</span>
                 </p>
                 <p class="product-item__new-price">
-                  999 ₽
+                  999
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -283,7 +285,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  199 ₽
+                  199
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -330,7 +333,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  1019 ₽
+                  1019
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -373,7 +377,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  600 ₽
+                  600
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -420,7 +425,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  49 ₽
+                  49
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
 
@@ -468,10 +474,12 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__old-price">
-                  299 ₽
+                  299
+                  <span class="product-item__rub">₽</span>
                 </p>
                 <p class="product-item__new-price">
-                  199 ₽
+                  199
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -517,7 +525,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  877 ₽
+                  877
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
               <button class="product-item__cart" type="button">
@@ -564,7 +573,8 @@
             <div class="product-item__price">
               <div class="product-item__price-all">
                 <p class="product-item__new-price">
-                  349 ₽
+                  349
+                  <span class="product-item__rub">₽</span>
                 </p>
               </div>
 
