added adaptive header/slider-top

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,9 @@
       <div class="container">
 
         <nav class="header-top__inner">
+          <button class="menu__btn active">
+            <span class="row"></span>
+          </button>
           <div class="header-top__info">
             <a class="header-top__link header-top__link--address link-white " href="#">адрес и время доставки</a>
             <a class="header-top__link header-top__link--tel link-white " href="tel:+7907288365">горячая линия 24/7</a>
@@ -54,6 +57,9 @@
           <a class="logo header-bottom__logo" href="#">
             <img class="logo" src="images/logo.svg" alt="логотип" width="200" height="60">
           </a>
+          <a class="logo-short" href="#">
+            <img class="logo-short" src="images/logo-short.svg" alt="логотип" width="37" height="40">
+          </a>
           <button class="header-bottom__btn" type="button">Каталог продуктов</button>
 
           <form class="header-bottom__search" action="#">
@@ -76,6 +82,14 @@
               <a class="header-bottom__user-link header-bottom__user-link--user" href="#" aria-label="личный кабинет">
                 <svg width="25" height="32">
                   <use xlink:href="images/sprite.svg#icon-user" width="25" height="32"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="header-bottom__user-item header-bottom__user-item--search">
+              <a class="header-bottom__user-link header-bottom__user-link--search" href="#" aria-label="личный кабинет">
+                <svg width="24" height="24">
+                  <use xlink:href="images/sprite.svg#search" width="24" height="24"></use>
                 </svg>
               </a>
             </li>
@@ -157,7 +171,7 @@
           </div>
         </li>
       </ul>
-    </section>
+    </section> 
 
 
     <section class="service">
@@ -187,10 +201,10 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> 
 
 
-    <section class="product indent">
+    <!-- <section class="product indent">
       <div class="container">
         <h2 class="title product__title">Топовые товары</h2>
 
@@ -583,9 +597,9 @@
         </div>
         <a class="product__link btn-show" href="#">Показать еще</a>
       </div>
-    </section>
+    </section> -->
 
-    <section class="top-product indent-bottom ">
+    <!-- <section class="top-product indent-bottom ">
       <h2 class="sr-only">Топовые товары</h2>
       <div class="container">
         <ul class="top-product__inner">
@@ -620,9 +634,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="promotions indent">
+    <!-- <section class="promotions indent">
       <div class="container">
         <h2 class="title promotions__title">Акции</h2>
         <div data-ref="container-2">
@@ -1004,9 +1018,9 @@
         </div>
         <a class="product__link btn-show btn-show__mini" href="#">Показать еще</a>
       </div>
-    </section>
+    </section> -->
 
-    <section class="partners">
+    <!-- <section class="partners">
       <h2 class="sr-only">Партнеры</h2>
       <div class="container">
 
@@ -1036,9 +1050,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <section class="news indent-bottom ">
+    <!-- <section class="news indent-bottom ">
       <div class="container">
         <div class="news__top">
           <h2 class="title news__title">наши новости</h2>
@@ -1087,11 +1101,11 @@
           </a>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <a class="footer-top__logo logo" href="#">
         <img class="logo" src="images/logo.svg" alt="логотип" width="200" height="60">
@@ -1208,7 +1222,7 @@
           </div>
         </div>
       </div>
-  </footer>
+  </footer> -->
 
 
 
