adaptive section product/ product-item

--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
     </section> 
 
 
-    <!-- <section class="product indent">
+    <section class="product indent">
       <div class="container">
         <h2 class="title product__title">Топовые товары</h2>
 
@@ -597,7 +597,7 @@
         </div>
         <a class="product__link btn-show" href="#">Показать еще</a>
       </div>
-    </section> -->
+    </section>
 
     <!-- <section class="top-product indent-bottom ">
       <h2 class="sr-only">Топовые товары</h2>
