corected adaptive product-item

--- a/app/index.html
+++ b/app/index.html
@@ -599,7 +599,7 @@
       </div>
     </section>
 
-    <!-- <section class="top-product indent-bottom ">
+     <section class="top-product indent-bottom ">
       <h2 class="sr-only">Топовые товары</h2>
       <div class="container">
         <ul class="top-product__inner">
@@ -634,7 +634,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section> 
 
     <!-- <section class="promotions indent">
       <div class="container">
