adaptive top-product

--- a/app/index.html
+++ b/app/index.html
@@ -624,7 +624,8 @@
             <a class="top-product__link" href="#">перейти к покупкам</a>
           </li>
 
-          <li class="top-product__item" style="background-image: url('images/top-product/group3.jpg');">
+          <li class="top-product__item top-product__item--group3"
+            style="background-image: url('images/top-product/group3.jpg');">
             <div class="top-product__subtitle">ням-ням</div>
             <h3 class="top-product__title">
               свежий<br>
@@ -636,7 +637,7 @@
       </div>
     </section> 
 
-    <!-- <section class="promotions indent">
+    <section class="promotions indent">
       <div class="container">
         <h2 class="title promotions__title">Акции</h2>
         <div data-ref="container-2">
@@ -1018,7 +1019,7 @@
         </div>
         <a class="product__link btn-show btn-show__mini" href="#">Показать еще</a>
       </div>
-    </section> -->
+    </section> 
 
     <!-- <section class="partners">
       <h2 class="sr-only">Партнеры</h2>
