--- a/app/index.html
+++ b/app/index.html
@@ -1021,7 +1021,7 @@
       </div>
     </section> 
 
-    <!-- <section class="partners">
+    <section class="partners">
       <h2 class="sr-only">Партнеры</h2>
       <div class="container">
 
@@ -1049,9 +1049,21 @@
           <li class="partners__item">
             <img class="partners__img" src="images/partners/fanta.png" width="80" alt="fanta">
           </li>
+
+          <li class="partners__item">
+            <img class="partners__img" src="images/partners/sprite.png" width="80" alt="sprite">
+          </li>
+
+          <li class="partners__item">
+            <img class="partners__img" src="images/partners/dr-pepper.png" width="80" alt="dr-pepper">
+          </li>
+
+          <li class="partners__item">
+            <img class="partners__img" src="images/partners/coca-cola.png" width="80" alt="coca-cola">
+          </li>
         </ul>
       </div>
-    </section> -->
+    </section> 
 
     <!-- <section class="news indent-bottom ">
       <div class="container">
