--- a/app/index.html
+++ b/app/index.html
@@ -1065,7 +1065,7 @@
       </div>
     </section> 
 
-    <!-- <section class="news indent-bottom ">
+  <section class="news indent-bottom ">
       <div class="container">
         <div class="news__top">
           <h2 class="title news__title">наши новости</h2>
@@ -1075,7 +1075,7 @@
         <div class="news__items">
           <a class="news__item" href="#">
             <div class="news__inner">
-              <img class="news__img" src="images/news/news-1.jpg" alt="клубника" width="410" height="238">
+              <img class="news__img" src="images/news/news-1.jpg" alt="клубника">
               <div class="news__date">
                 <span class="news__month">июль</span>
                 <span class="news__number">15</span>
@@ -1089,7 +1089,7 @@
 
           <a class="news__item" href="#">
             <div class="news__inner">
-              <img class="news__img" src="images/news/news-2.jpg" alt="манго" width="410" height="238">
+              <img class="news__img" src="images/news/news-2.jpg" alt="манго">
             </div>
             <div class="news__date">
               <span class="news__month">май</span>
@@ -1102,7 +1102,7 @@
 
           <a class="news__item" href="#">
             <div class="news__inner">
-              <img class="news__img" src="images/news/news-3.jpg" alt="папая" width="410" height="238">
+              <img class="news__img" src="images/news/news-3.jpg" alt="папая">
             </div>
             <div class="news__date">
               <span class="news__month">февраль</span>
@@ -1114,7 +1114,7 @@
           </a>
         </div>
       </div>
-    </section> -->
+    </section> 
   </main>
 
 
