--- a/app/index.html
+++ b/app/index.html
@@ -67,8 +67,8 @@
             <div class="header-bottom__search-block">
               <!-- убрать ссылку -->
               <a class="header-bottom__search-vector" href="#">
-                <svg width="21" height="20">
-                  <use xlink:href="images/sprite.svg#vector" width="21" height="20"></use>
+                <svg>
+                  <use xlink:href="images/sprite.svg#vector"></use>
                 </svg>
               </a>
               <input class="header-bottom__search-input" name="search" type="search" aria-label="Найти в магазине"
@@ -80,24 +80,24 @@
           <ul class="header-bottom__user-nav">
             <li class="header-bottom__user-item">
               <a class="header-bottom__user-link header-bottom__user-link--user" href="#" aria-label="личный кабинет">
-                <svg width="25" height="32">
-                  <use xlink:href="images/sprite.svg#icon-user" width="25" height="32"></use>
+                <svg>
+                  <use xlink:href="images/sprite.svg#icon-user"></use>
                 </svg>
               </a>
             </li>
 
             <li class="header-bottom__user-item header-bottom__user-item--search">
               <a class="header-bottom__user-link header-bottom__user-link--search" href="#" aria-label="личный кабинет">
-                <svg width="24" height="24">
-                  <use xlink:href="images/sprite.svg#search" width="24" height="24"></use>
+                <svg>
+                  <use xlink:href="images/sprite.svg#search"></use>
                 </svg>
               </a>
             </li>
 
             <li class="header-bottom__user-item">
               <a class="header-bottom__user-link header-bottom__user-link--heart" href="#" aria-label="избранное">
-                <svg width="32" height="29">
-                  <use xlink:href="images/sprite.svg#icon-heart" width="32" height="29"></use>
+                <svg>
+                  <use xlink:href="images/sprite.svg#icon-heart"></use>
                 </svg>
                 <span class="header-bottom__user-num header-bottom__user-num">12</span>
               </a>
@@ -105,8 +105,8 @@
 
             <li class="header-bottom__user-item">
               <a class="header-bottom__user-link header-bottom__user-link--cart" href="#" aria-label="корзина">
-                <svg width="32" height="31">
-                  <use xlink:href="images/sprite.svg#icon-cart" width="32" height="31"></use>
+                <svg>
+                  <use xlink:href="images/sprite.svg#icon-cart"></use>
                 </svg>
               </a>
               <span class="header-bottom__user-num header-bottom__user-num--two">12</span>
@@ -115,6 +115,118 @@
         </div>
       </div>
     </div>
+
+    <!-- для адаптива. отдельно файл scss - mob-menu -->
+    <nav class="mob-menu">
+      <a class="logo-green" href="#">
+        <img class="logo-green__img" src="images/logo-green.svg" alt="логотип" width="190" height="60">
+      </a>
+
+      <div class="mob-menu__profile">
+        <a class="header-bottom__user-link" href="#" aria-label="личный кабинет">
+          <svg>
+            <use xlink:href="images/sprite.svg#icon-user"></use>
+          </svg>
+        </a>
+
+        <a class="mob-menu__login mob-menu__login--slash" href="#">Вход</a>
+        <a class="mob-menu__login" href="#">Регистрация</a>
+      </div>
+      <button class="header-bottom__btn" type="button">Каталог товаров</button>
+
+      <div class="mob-menu__contact">
+        <a class="mob-menu__info mob-menu__info--tell" href="tel:+7907288365">
+          +7 907 288 365
+        </a>
+        <a class="mob-menu__info mob-menu__info--address" href="#">
+          Санкт-Петербург, ул. Ленина, 1
+        </a>
+      </div>
+
+      <ul class="mob-menu__social">
+        <li class="mob-menu__social-list">
+          <a class="mob-menu__social-link" href="#">
+            <svg width="33" height="32">
+              <use xlink:href="images/sprite.svg#icon-facebook" width="33" height="32"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="mob-menu__social-list">
+          <a class="mob-menu__social-link" href="#">
+            <svg width="33" height="32">
+              <use xlink:href="images/sprite.svg#icon-youtube" width="33" height="32"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="mob-menu__social-list">
+          <a class="mob-menu__social-link" href="#">
+            <svg width="33" height="32">
+              <use xlink:href="images/sprite.svg#icon-telegram" width="33" height="32"></use>
+            </svg>
+          </a>
+        </li>
+
+        <li class="mob-menu__social-list">
+          <a class="mob-menu__social-link" href="#">
+            <svg width="33" height="32">
+              <use xlink:href="images/sprite.svg#icon-instagram" width="33" height="32"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+
+      <ul class="mob-menu__list">
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Доставка
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            О нас
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Новости
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Контакты
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Акции
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Вакансии
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Отзывы
+          </a>
+        </li>
+
+        <li class="mob-menu__item">
+          <a class="mob-menu__link" href="#">
+            Публичная оферта
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
 
 
@@ -171,7 +283,7 @@
           </div>
         </li>
       </ul>
-    </section> 
+    </section>
 
 
     <section class="service">
@@ -201,7 +313,7 @@
           </li>
         </ul>
       </div>
-    </section> 
+    </section>
 
 
     <section class="product indent">
@@ -253,8 +365,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -297,9 +409,10 @@
               <div class="product-item__top">
                 <div class="product-item__span"></div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
+                  </svg>
                   </svg>
                 </button>
 
@@ -341,8 +454,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -382,8 +495,8 @@
               <div class="product-item__top">
                 <div class="product-item__span"></div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -420,8 +533,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -465,8 +578,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -513,8 +626,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -557,8 +670,8 @@
                   </span>
                 </div>
                 <button class="product-item__heart" type="button">
-                  <svg width="38" height="29">
-                    <use xlink:href="images/sprite.svg#icon-heart-product" width="38" height="29">
+                  <svg>
+                    <use xlink:href="images/sprite.svg#icon-heart-product">
                     </use>
                   </svg>
                 </button>
@@ -599,7 +712,7 @@
       </div>
     </section>
 
-     <section class="top-product indent-bottom ">
+    <section class="top-product indent-bottom ">
       <h2 class="sr-only">Топовые товары</h2>
       <div class="container">
         <ul class="top-product__inner">
@@ -635,7 +748,7 @@
           </li>
         </ul>
       </div>
-    </section> 
+    </section>
 
     <section class="promotions indent">
       <div class="container">
@@ -1019,7 +1132,7 @@
         </div>
         <a class="product__link btn-show btn-show__mini" href="#">Показать еще</a>
       </div>
-    </section> 
+    </section>
 
     <section class="partners">
       <h2 class="sr-only">Партнеры</h2>
@@ -1063,9 +1176,9 @@
           </li>
         </ul>
       </div>
-    </section> 
+    </section>
 
-  <section class="news indent-bottom ">
+    <section class="news indent-bottom ">
       <div class="container">
         <div class="news__top">
           <h2 class="title news__title">наши новости</h2>
@@ -1114,11 +1227,11 @@
           </a>
         </div>
       </div>
-    </section> 
+    </section>
   </main>
 
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <a class="footer-top__logo logo" href="#">
         <img class="logo" src="images/logo.svg" alt="логотип" width="200" height="60">
@@ -1235,7 +1348,7 @@
           </div>
         </div>
       </div>
-  </footer> -->
+  </footer>
 
 
 
