--- a/app/index.html
+++ b/app/index.html
@@ -134,14 +134,14 @@
       </div>
       <button class="header-bottom__btn" type="button">Каталог товаров</button>
 
-      <div class="mob-menu__contact">
+      <address class="mob-menu__contact">
         <a class="mob-menu__info mob-menu__info--tell" href="tel:+7907288365">
           +7 907 288 365
         </a>
         <a class="mob-menu__info mob-menu__info--address" href="#">
           Санкт-Петербург, ул. Ленина, 1
         </a>
-      </div>
+      </address>
 
       <ul class="mob-menu__social">
         <li class="mob-menu__social-list">
@@ -252,7 +252,7 @@
           </div>
         </li>
 
-        <li class="slider-top__item" style=" background-image: url('images/slider/top-slider2.jpg');">
+        <li class="slider-top__item" style=" background-image: url(images/slider/top-slider2.jpg);">
           <div class="container">
             <div class="slider-top__content">
               <div class="slider-top__name">
